# randd-architect-1day-intern-2024

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/actions/setup-linter/: action.yml
.github/workflows/: push-docker-image.yml  python-lint.yml
.streamlit/: config.toml
app/: __init__.py  api.py  call_api.py  cards.csv  funcs.py  main.py  module.py  test.ipynb  view_map.py
tests/: test_sample.py
